<resources>
    <string name="app_name">IFitness</string>
    <string name="rbCaminhada">Caminhada</string>
    <string name="rbCiclismo">Ciclismo</string>
    <string name="rbCorrida">Corrida</string>
    <string name="rbNatacao">Natação</string>
    <string name="txtTipoAtividade">Tipo de atividade:</string>
    <string name="btnSalvar">Salvar</string>
    <string name="strgCaloria">Caloria</string>
    <string name="strgKM">Quilometragem KM</string>
    <string name="strgDuracao">Duração</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="txtEntrar">Entrar</string>
    <string name="txtEmail">E-mail</string>
    <string name="txtSenha">Senha</string>
    <string name="txtNome">Nome</string>
    <string name="txtBtnCadastrar">Cadastrar</string>
    <string name="txtSexo">Sexo</string>
    <string name="txtTelefone">Telefone</string>
    <string name="txtDataNascimento">Data de nascimento</string>
    <string name="msg_login">E-mail e/ou senha inválidos</string>
    <string name="menu_drawer_account">Minha Conta</string>
    <string name="menu_drawer_home">Home</string>
    <string name="menu_drawer_logout">Sair</string>
    <string name="toggle_close">Close</string>
    <string name="toggle_open">Open</string>
    <string name="txtTituloToolbar">Título</string>
    <string name="strDataAtividade">Data da atividade</string>
    <string name="strEntrar">Entrar</string>
    <string name="menu_drawer_atividades">Atividades</string>
    <string name="menu_drawer_estatistica">Estatística</string>
    <string name="menu_drawer_leaderboard">Quadro de líderes</string>
    <string name="title_atividades">Atividades</string>
    <string name="itemAtividades">Atividades</string>
    <string name="txtTituloPerfilUsuario">Perfil</string>
    <string name="txtTituloAtividade">Atividades</string>
    <string name="txtTituloLogin">Login</string>
    <string name="txtTituloCadastroAtividade">Cadastrar atividade</string>
    <string name="cadastro_atividade_msg_sucesso">Atividade cadastrada com sucesso!</string>
    <string name="txtPosicao">1</string>
    <string name="txtPontuacao">100</string>
    <string name="txtTituloLeaderboard">Leaderboard</string>
    <string name="txtTituloEstatistica">Estatística</string>
    <string name="title_emblema">Conquistas</string>
</resources>