<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAtividades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtTipoAtividade"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rgTipoAtividade">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbCaminhada"
                    android:id="@+id/rbCaminhada" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbCiclismo"
                    android:id="@+id/rbCiclismo" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbCorrida"
                    android:id="@+id/rbCorrida" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbNatacao"
                    android:id="@+id/rbNatacao" />
            </RadioGroup>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:hint="@string/strgDuracao"
                android:id="@+id/txtDuracao" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/strgKM"
                android:id="@+id/txtKM" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:hint="@string/strgCaloria"
                android:id="@+id/txtCaloria" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAddAtividade"
            android:layout_width="372dp"
            android:layout_height="51dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/btnSalvar"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="264dp"
            android:backgroundTint="@color/green"/>/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>