<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    android:padding="8dp"
    android:layout_margin="8dp"
    android:id="@+id/listViewLeaderboard">

    <TextView
        android:id="@+id/txtPosicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/txtPosicao" />

    <TextView
        android:id="@+id/txtNomeAdapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/txtNome" />

    <TextView
        android:id="@+id/txtPontuacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/txtPontuacao" />
</LinearLayout>